<resources>
    <string name="app_name">kozenlib</string>
    <string name="btn_cal_00">00</string>
    <string name="btn_cal_0">0</string>
    <string name="btn_cal_1">1</string>
    <string name="btn_cal_2">2</string>
    <string name="btn_cal_3">3</string>
    <string name="btn_cal_4">4</string>
    <string name="btn_cal_5">5</string>
    <string name="btn_cal_6">6</string>
    <string name="btn_cal_7">7</string>
    <string name="btn_cal_8">8</string>
    <string name="btn_cal_9">9</string>
    <string name="btn_esc">Esc</string>
    <string name="btn_confirm">Confirm</string>

    <string name="cancel_payments">Cancel Payment</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="new_payment">New Payment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_paid">Get Paid</string>
    <string name="input_pin">Kindly input your pin</string>
    <string name="insert_card">Please insert customer card</string>
    <string name="isw_title_transfer_amount">Make a bank transfer of %1$s to the account below to complete your payment</string>
    <string name="isw_title_amount">\u20A6 %1$s</string>
    <string name="isw_action_back">Back</string>
    <string name="print_qr_code">PRINT QR CODE</string>
    <string name="isw_select_bank">Select a Bank</string>
    <string name="isw_hint_select_bank_hint">Select Customer\'s Preferred Bank</string>
    <string name="isw_hint_enter_ussd_code">Enter this code: %1$s to pay using Quickteller</string>
    <string name="back_button">Back Button</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="delete_button">Delete Button</string>
    <string name="_0">0</string>
    <string name="enter_button">Enter Button</string>
    <string name="card_icon">Card Icon</string>
    <string name="pin">PIN - </string>
    <string name="enter_pin">Enter PIN</string>
</resources>