<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/iswPinDialogBg">

    <ImageView
        android:id="@+id/btnEsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        android:padding="16dp"
        android:scaleType="center"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScreenDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/cera_pro_medium"
        android:text="@string/enter_pin"
        android:textColor="@color/iswPinDialogTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPinLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cera_pro_bold"
        android:text="@string/pin"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEsc" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cera_pro_bold"
        tools:text="Offline"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/tvPinLabel"
        app:layout_constraintTop_toBottomOf="@+id/btnEsc" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cera_pro_bold"
        tools:text="(3 trials left)"
        android:visibility="invisible"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/btnEsc" />

    <TextView
        android:id="@+id/tvPinLabelDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/cera_pro_medium"
        android:lineSpacingExtra="10dp"
        android:lines="2"
        android:paddingHorizontal="20dp"
        android:text="Please enter your Card Pin to authorise and complete your payment of "
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPinLabel" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/cera_pro_medium"
        android:textColor="@color/iswColorError"
        android:lineSpacingExtra="10dp"
        android:visibility="gone"
        android:paddingHorizontal="20dp"
        tools:text="Security trigger - The card has been removed"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPinLabelDesc" />


    <androidx.cardview.widget.CardView
        android:id="@+id/layout_pin"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:cardCornerRadius="7dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvError"
        app:layout_constraintBottom_toTopOf="@id/mid_screen_guideline"
        app:layout_constraintVertical_bias="0"
        app:strokeColor="@color/iswPinDialogTextColor"
        app:strokeWidth="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/stroke_border" >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cera_pro_light"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_pin"
                android:textColor="@color/iswPinDialogTextColor"
                tools:text="****"
                android:textStyle="bold"
                android:textSize="20sp"
                android:letterSpacing="0.1"
                android:paddingStart="16dp"
                android:textColorHint="@color/iswPinDialogHintColor" />

            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/card_round_bg"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp" >

                <ImageView
                    android:id="@+id/ivCardImage"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:src="@drawable/isw_card_unionpay"
                    android:contentDescription="@string/card_icon" />
            </FrameLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mid_screen_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_keypad"
        app:layout_constraintGuide_percent="0.5"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_keypad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mid_screen_guideline"
        app:layout_constraintVertical_bias="1.0" >


        <LinearLayout
            android:id="@+id/layout_one_to_three"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:padding="2dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_four_to_six">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn1"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <TextView
                    android:id="@+id/tvBtn1"
                    style="@style/PinPadButtonText"
                    android:text="@string/_1" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn2"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <TextView
                    android:id="@+id/tvBtn2"
                    style="@style/PinPadButtonText"
                    android:text="@string/_2" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn3"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <TextView
                    android:id="@+id/tvBtn3"
                    style="@style/PinPadButtonText"
                    android:text="@string/_3" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_four_to_six"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_one_to_three"
            app:layout_constraintBottom_toTopOf="@id/layout_seven_to_nine" >

            <androidx.cardview.widget.CardView
                android:id="@+id/btn4"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <TextView
                    android:id="@+id/tvBtn4"
                    style="@style/PinPadButtonText"
                    android:text="@string/_4" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn5"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <TextView
                    android:id="@+id/tvBtn5"
                    style="@style/PinPadButtonText"
                    android:text="@string/_5" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn6"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <TextView
                    android:id="@+id/tvBtn6"
                    style="@style/PinPadButtonText"
                    android:text="@string/_6" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_seven_to_nine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_four_to_six"
            app:layout_constraintBottom_toTopOf="@id/layout_zero_enter" >

            <androidx.cardview.widget.CardView
                android:id="@+id/btn7"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <TextView
                    android:id="@+id/tvBtn7"
                    style="@style/PinPadButtonText"
                    android:text="@string/_7" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn8"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <TextView
                    android:id="@+id/tvBtn8"
                    style="@style/PinPadButtonText"
                    android:text="@string/_8" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn9"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <TextView
                    android:id="@+id/tvBtn9"
                    style="@style/PinPadButtonText"
                    android:text="@string/_9" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_zero_enter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_seven_to_nine">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnClear"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/iswPinButtonDelete"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <ImageView
                    android:layout_height="20dp"
                    android:layout_width="20dp"
                    android:src="@drawable/ic_back_btn"
                    android:layout_gravity="center"
                    android:contentDescription="@string/delete_button" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn0"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <TextView
                    android:id="@+id/tvBtn0"
                    style="@style/PinPadButtonText"
                    android:text="@string/_0" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnConfirm"
                style="@style/AppTheme.PinPadButton"
                app:cardCornerRadius="7dp"
                android:layout_weight="1"
                android:backgroundTint="@color/iswPinButtonEnter"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintStart_toStartOf="@id/four"
                app:layout_constraintEnd_toEndOf="@+id/four" >

                <ImageView
                    android:layout_height="20dp"
                    android:layout_width="20dp"
                    android:src="@drawable/ic_enter_btn"
                    android:contentDescription="@string/enter_button"
                    android:layout_gravity="center" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>